# guile-netcdf

./: ChangeLog  Makefile.am  README  configure.ac
modules/: Makefile.am
modules/netcdf/: Makefile.am  netcdf.scm
modules/netcdf/scripts/: Makefile.am  attribute-edit.scm  describe.scm  help.scm  query.scm  variable-edit.scm
scripts/: Makefile.am  ncguile
src/: Makefile.am
src/netcdf/: Makefile.am  guile_netcdf.c
